1 August 2018
        Added the react-responsive library so I should be able to more easily design for responsive.
        Improved News Page for resolutions up to and including 4K
        Improved News Page for larger resolutions by adding images and reducing article width
        Improved the home page flex
        Improved appearance of news page

31 July 2018 - 
        Cracked the shareable urls
        Starting to populate and style the website
        Added random images to home page and news pages.
        
30 July 2018 - What I Did today
        Spent the entire day working on the shareable urls
        Made a breakthrough towards the end of the end of the day that will allow me to proceed
        Will develop more tommorow.

26 July 2018 - What I Did today:
        ✔ Figured out how to add a new line to JSON data.
        ✔ Made some progress with Unique IDs but hit some roadblocks. I feel like I am so close to a breakthrough
        ✔ I managed to get unique shareable urls working. You can manually navigation to any page provided the id of the page exists in the database. There is still a lot of work to be done here as I have detailed in the todo file. Basically I think I need to completley overhaul the way I am retrieving the data and displaying it on page.