@@ -1,0 +1,11 @@
+import React from 'react';
+
+export const Footer = () => {
+    return (
+        <footer>
+            <p>This is the footer</p>
+        </footer>
+    )
+}
+
+export default Footer;
