@@ -42,6 +42,7 @@
 
 
     @media (min-width: 768px) {
+
         .brand{
             flex: 1;
             padding-right: 5rem;
@@ -51,7 +52,11 @@
         .header-container{
             display: flex;
             flex-direction: row-reverse;
+            margin: 0 auto;
+            max-width: 1920px;
             padding: 5px;
+            width: 90%;
+
         }
 
         .header-container nav{
