@@ -41,6 +41,6 @@
 @media (min-width: 768px) {
     .home-wrapper{
         margin: 0 auto;
-        width: 90%;
+        /* width: 90%; */
     }
 }
