@@ -8,7 +8,7 @@ export class Home extends React.Component{
     render(){
         return(
             <div className='home-wrapper' >                
-                <h1>Home</h1>
+                {/* <h1>Home</h1> */}
                 <div className="news-item-wrapper">
                     <NewsItemLoop />                    
                 </div>
