@@ -1,3 +1,4 @@
+/* NewMap Class */
 .news-square{
     border:5px solid white;
     display: flex;
@@ -6,6 +7,29 @@
 
 }
 
+
+/* Caption Class */
 .news-item-link{
     width: 100%;
+    background-color: red;
 }
+    .news-item-link{
+        position: relative;
+    }
+
+        .news-item-link-text{
+            bottom: 0;
+            width: 100%;
+            /* border: 5px solid red; */
+            position: absolute;
+            margin: 0;
+            padding: 0;
+            background-color: black;
+            color: white;
+        }
+        .news-item-link-text span{
+            display: block;
+            font-size:2rem;
+            padding: 5px;
+        }
+
