@@ -1,6 +1,6 @@
 .news-page-wrapper{
     border: 1px solid;
-    width: 90%;
+    /* width: 90%; */
     margin: 0 auto;
     max-width: 1920px;
 
