@@ -1,0 +1,4 @@
+.body-wrapper{
+    max-width: 1920px;
+    margin: 0 auto;
+}
