@@ -2,6 +2,8 @@ import React from 'react';
 
 import {Route, Redirect, Switch} from 'react-router-dom';
 
+import './routes.css';
+
 import Home from '../home-page/home.js';
 import NewsPage from '../news-page/news-page.js'
 
