@@ -1,3 +1,9 @@
+2 August 2018
+        Added the footer
+        Made some improvements to news page responsiveness
+        Tweaked Header to be a bit better at higher resolutions
+        Started work on the home page news item caption.
+
 1 August 2018
         Added the react-responsive library so I should be able to more easily design for responsive.
         Improved News Page for resolutions up to and including 4K
